--- a/plagiarismchecker/templates/pc/index.html
+++ b/plagiarismchecker/templates/pc/index.html
@@ -146,14 +146,15 @@
       <div class="row">
         <div style="background-color: #ffffff; border: 1px solid #402ea6; color: rgb(0, 0, 0); font-family: Arial, Helvetica, sans-serif;" class="col-md-6 result-1">
           <h2 style="font-weight: bolder;">Plagiarized Content From:</h2>
-          <ul class="output-list-1">
+          <hr>
+          <ul class="output-list-1" style="list-style:square; text-align: justify;">
             {% for links in link %}            
-              <li>{{ links }}</li>
+              <li><a href="{{ links }}" style="text-decoration:underline; color: #6c56e6;">{{ links }}</a></li>
             {% endfor %}
       </div>
       <div class="col-md-6 result-2" style="text-align: center; align-items: center;">
         <p class="output-per-tot">{{ percent }}%</p>
-        <h3 style="font-family: Arial black, Helvetica, sans-serif;">Plagiarized</h3>
+        <h3 style="font-family: Arial black, Helvetica, sans-serif;">Plagiarized Content</h3>
       </div>
       </div>
     </div>
