--- a/plagiarismchecker/templates/pc/index.html
+++ b/plagiarismchecker/templates/pc/index.html
@@ -27,6 +27,7 @@
       background-color: #ffffff;
       color: rgb(0, 0, 0);
       font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+
     }
     nav{
       background-color:rgb(255, 255, 255);
@@ -67,15 +68,16 @@
       <i class="bi bi-clipboard-check-fill"></i> Plag Checker</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+      <span class="navbar-toggler-icon" style="background-color: #606060;"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav" style="margin-left: auto; ">
-        <li class="nav-item nav-one">
-          <a type="button" style="color: #000000; font-weight: bolder; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;" class="nav-link btn btn-info" href="{% url 'compare' %}">Compare Documents</a>
-        
+      <ul class="navbar-nav" style="margin-left: auto;">
+        <li class="nav-item nav-one" >
+          <a type="button" style="color: #000000; font-weight: bolder; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;" class="nav-link btn btn-info" href="{% url 'compare' %}">Compare Documents</a>       
         </li>
-        
+        <!-- <li class="nav-item nav-one">
+          <a type="button" style="color: #000000; font-weight: bolder; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;" class="nav-link btn btn-warning" href="{% static 'pc/login.html' %}">Login</a>
+        </li> -->
      </ul>
     </div>
   </nav>
@@ -102,8 +104,10 @@
     
 			<hr>
     <h3 class="container">To use this plagiarism checker, please copy and paste your text in the box below, then click on the “Check Plagiarism” button, sit back and watch as your article undergoes a free plagiarism scan.
+      
     </h3>
     <hr>
+    
    
    </div> 
    <hr>
