--- a/plagiarismchecker/templates/pc/login.html
+++ b/plagiarismchecker/templates/pc/login.html
@@ -4,7 +4,8 @@
    <head>
       <meta charset="utf-8">
       <title>Plag Checker Login</title>
-      <link rel="stylesheet" href="css/style.css">
+     
+      <link href='stylesheetlogin.css' rel="stylesheet" type="text/css">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
    <body>
@@ -27,7 +28,7 @@
                <div class="slider-tab"></div>
             </div>
             <div class="form-inner">
-               <form action="index-copy.html" class="login">
+               <form action="..\templates\pc/index.html" class="login">
                   <div class="field">
                      <input type="text" placeholder="Email Address" required>
                   </div>
